# mobius

./: .dockerignore  .env.default  .env.example  .env.example.zh  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.en.md  README.md  README.zh.md  WHAT_WE_WANT_TO_SAY.md  WHAT_WE_WANT_TO_SAY.zh.md  boot_utils.py  build.py  conf_check.py  conf_prepare.py  debug.py  diag-repro.cjs  docker-compose.yml  docker-entrypoint.sh  imac_runtime.py  mkdocs.yml  package-lock.json  product.py  start.py
.github/workflows/: desktop-release.yml  docs.yml  momo-mobile-build.yml  momo-mobile-screenshot-verify.yml
assess_appearance/: SKILL.md  examples.md  schema.json
deploy/: Dockerfile  DockerfileV0  README.md  docker-compose.yml
deploy/claude/: settings.api.json  settings.json
deploy/codex/: mobiusdefault.config.toml
docs/: RFC-long-running-watch.md  agent-backend-spec.tsx  agents-dependencies.md  agents-manual-test.md  design-ext.md  endpoint.md  index.en.md  index.md  jsonl-loading-bench.md  path.md  self-evo-demo.md  zhipu-key-setup.md
docs/compute-and-devices/: README.md  README.zh.md
docs/specs/: 2026-06-20-issue-star-and-resizable-sidebars-design.md  2026-06-20-self-cognition-design.md
docs/tutorial/: 01_add_user.en.md  01_add_user.zh.md  02a_import_project_and_begin_first_job.en.md  02a_import_project_and_begin_first_job.md  03a_using_skill_and_memory.en.md  03a_using_skill_and_memory.md  04_add_remote_server.en.md  04_add_remote_server.md  05_using_xiaomo_assistant.en.md  05_using_xiaomo_assistant.md  06_prevent_agent_idle.en.md  06_prevent_agent_idle.md  07_exclude_skills_memory.en.md  07_exclude_skills_memory.md  08_monitor_agents.en.md  08_monitor_agents.md  09_config_codex_model.en.md  09_config_codex_model.md  10_config_claude_code_model.en.md  10_config_claude_code_model.md  11_limit_model_usage.en.md  11_limit_model_usage.md  12_migrate_skill_memory.en.md  12_migrate_skill_memory.md  13_xiaomo_control_hub.en.md  13_xiaomo_control_hub.md  14_chat_input_tips.en.md  14_chat_input_tips.md  15_switch_model_mid_session.en.md  15_switch_model_mid_session.md  16_change_frontend_theme.en.md  16_change_frontend_theme.md  17_favorite_project.en.md  17_favorite_project.md  18_package_download_project.en.md  18_package_download_project.md  19_enable_research_and_create.en.md  19_enable_research_and_create.md  20_research_agent_team.en.md  20_research_agent_team.md  (+20 more)
mobius/: db.js  db.ts  ecosystem.config.js  ecosystem.live-frontend.config.js  package-lock.json  package.json  pm2-entrypoint.js  schema.sql  server.js  start_debug.py  start_product.py  tsconfig.backend.json
mobius/backend/: config.js
mobius/backend/agents_py/: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
mobius/backend/agents_py/src/aimax/: __init__.py  _version.py  base.py  cli.py  config.py  tmux_claude_code.py  tmux_codex.py
mobius/backend/agents_py/src/aimax/services/: __init__.py  admin_settings.py  agent_prompt_events.py  jsonl_watcher.py  mobius_jsonl.py  model_access.py  model_registry.py
mobius/backend/agents_py/src/aimax/utils/: __init__.py  session_flags.py
mobius/backend/agents_py/src/tmux_agents/: __init__.py  _version.py  base.py  cli.py  config.py  tmux_claude_code.py  tmux_codex.py
mobius/backend/agents_py/src/tmux_agents/services/: __init__.py  admin_settings.py  agent_prompt_events.py  jsonl_watcher.py  mobius_jsonl.py
mobius/backend/agents_py/src/tmux_agents/utils/: __init__.py  session_flags.py
mobius/desktop/: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  index.html  index.js  package-lock.json  package.json  status.html
mobius/desktop_discarded/: index.html  tsconfig.json
mobius/extension/: momo-mobile
scripts/: imac-export.sh  imac-import.sh  install-code-server.bash  install-dummy-bash-cmd-list.bash  start-code-server.bash
(+686 files in other folders)
