# pyproject.toml — packaging configuration for `aimax`.
#
# Layout follows the "src/" convention recommended by PyPA:
#   src/aimax/...   ← the importable package
#   pyproject.toml        ← this file (build + project metadata)
#   README.md / LICENSE   ← published as the long description + licence

[build-system]
# Hatchling is the modern, fast, zero-config build backend maintained by
# the Hatch project (also used by Anthropic for some of their tools).
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "aimax"
description = "Drive Claude Code and Codex TUIs through tmux from Python."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "aimax contributors" }]
keywords = [
    "tmux",
    "claude",
    "claude-code",
    "codex",
    "agent",
    "automation",
    "asyncio",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
# No runtime dependencies — everything is stdlib. We require ``tmux`` and
# either ``claude`` or ``codex`` to be on $PATH at runtime, which Python
# packaging cannot express; the backends do a preflight check on import
# and fail loudly if they're missing.
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
# Convenience target for contributors. ``pip install -e .[dev]``.
dev = [
    "build",
    "twine",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://pypi.org/project/aimax/"
Documentation = "https://pypi.org/project/aimax/"
Source = "https://pypi.org/project/aimax/"
Changelog = "https://pypi.org/project/aimax/"

[project.scripts]
aimax = "aimax.cli:main"
# Compatibility entry point for existing users of the old distribution.
tmux-agents = "aimax.cli:main"

# ---------------------------------------------------------------------------
# Hatchling configuration
# ---------------------------------------------------------------------------
[tool.hatch.version]
# Read the version straight out of ``_version.py`` so there's a single
# source of truth that ``__version__`` and metadata both point at.
path = "src/aimax/_version.py"

[tool.hatch.build.targets.wheel]
# Tell hatch which directory to include in the wheel.
packages = ["src/aimax", "src/tmux_agents"]

[tool.hatch.build.targets.sdist]
include = [
    "src/aimax",
    "src/tmux_agents",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/.DS_Store",
]

# ---------------------------------------------------------------------------
# Tooling (optional — kept here so users who want to lint/typecheck have a
# starting point; none of this is required to install or use the package)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line-length is handled by formatter
    "B008",  # ``field(default_factory=...)`` triggers this incorrectly
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
